force-app/main/default/objects/OverweightSetting__c/OverweightSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Overweight Setting</label>
</CustomObject>