force-app/main/default/objects/OverweightSetting__c/fields/FoodChargeProductId__c.field-meta.xml
<CustomField>
    <fullName>FoodChargeProductId__c</fullName>
    <label>Food Charge Product</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>