force-app/main/default/objects/OverweightSetting__c/fields/FoodProductCategoryId__c.field-meta.xml
<CustomField>
    <fullName>FoodProductCategoryId__c</fullName>
    <label>Food Product Category</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>