force-app/main/default/objects/OverweightSetting__c/fields/GeneralWasteChargeProductId__c.field-meta.xml
<CustomField>
    <fullName>GeneralWasteChargeProductId__c</fullName>
    <label>General Waste Charge Product</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>