force-app/main/default/objects/OverweightSetting__c/fields/GeneralWasteProductCategoryId__c.field-meta.xml
<CustomField>
    <fullName>GeneralWasteProductCategoryId__c</fullName>
    <label>General Waste Product Category</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>