force-app/main/default/objects/OverweightSetting__c/fields/GlassChargeProductId__c.field-meta.xml
<CustomField>
    <fullName>GlassChargeProductId__c</fullName>
    <label>Glass Charge Product</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>