force-app/main/default/objects/OverweightSetting__c/fields/GlassProductCategoryId__c.field-meta.xml
<CustomField>
    <fullName>GlassProductCategoryId__c</fullName>
    <label>Glass Product Category</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>