force-app/main/default/objects/OverweightSetting__c/fields/MixedRecyclingChargeProductId__c.field-meta.xml
<CustomField>
    <fullName>MixedRecyclingChargeProductId__c</fullName>
    <label>Mixed Recycling Charge Product</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>