force-app/main/default/objects/OverweightSetting__c/fields/MixedRecyclingProductCategoryId__c.field-meta.xml
<CustomField>
    <fullName>MixedRecyclingProductCategoryId__c</fullName>
    <label>Mixed Recycling Product Category</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>